--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:hint="Type your message here"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="42dp" />
 
     <TextView
         android:id="@+id/analysisTextView"
@@ -28,14 +29,14 @@
         android:hint="Your score will be displayed here"
         android:layout_below="@+id/messageEditText"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="21dp" />
+        android:layout_marginTop="32dp" />
 
     <Button
         android:text="Analyze This!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sendAnalysisButton"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="32dp"
         android:layout_below="@+id/analysisTextView"
-        android:layout_toEndOf="@+id/analysisTextView" />
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
