--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,7 +26,6 @@
         android:id="@+id/analysisTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Your score will be displayed here"
         android:layout_below="@+id/messageEditText"
         android:layout_alignParentStart="true"
         android:layout_marginTop="32dp" />
@@ -39,4 +38,17 @@
         android:layout_marginTop="32dp"
         android:layout_below="@+id/analysisTextView"
         android:layout_alignParentEnd="true" />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gridView"
+        android:layout_below="@+id/messageEditText"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="11dp"
+        android:layout_marginTop="11dp">
+
+    </GridLayout>
+
+
 </RelativeLayout>
